# DaemonServer

./: CMakeLists.txt  README.md
client/: main.c
server/: main.c  proxy.c  proxy.h  server_initializer.c  server_initializer.h  waiter.c  waiter.h  waiter.h.gch  worker.c  worker.h
